--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "homepage": "https://github.com/imjoehaines/nearwell",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-browserify": "^3.8.0",
     "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-notify": "^0.4.1",
-    "grunt-template-jasmine-istanbul": "^0.3.3"
+    "grunt-notify": "^0.4.1"
   },
   "dependencies": {
     "lodash": "^3.9.3"
