--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
     "test": "spec"
   },
   "scripts": {
-    "test": "grunt jasmine:all"
+    "test": "grunt jasmine:all",
+    "lint": "standard spec/js/**/* src/js/**/*"
   },
+  "pre-commit": [
+    "test",
+    "lint"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/imjoehaines/nearwell.git"
@@ -21,7 +26,9 @@
     "grunt-browserify": "^3.8.0",
     "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-notify": "^0.4.1"
+    "grunt-notify": "^0.4.1",
+    "pre-commit": "^1.0.10",
+    "standard": "^4.3.1"
   },
   "dependencies": {
     "lodash": "^3.9.3"
