--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
   - "iojs"
 before_install:
   - npm install -g grunt-cli
+before_script:
+  - grunt browserify:specs
 script:
   - npm test
   - npm run lint
