--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "standard": "^4.3.1"
   },
   "dependencies": {
-    "lodash": "^3.9.3"
+    "lodash": "^3.9.3",
+    "random-number-in-range": "^1.0.0"
   }
 }
