--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "standard": "^4.3.1"
   },
   "dependencies": {
+    "inherits": "^2.0.1",
     "lodash": "^3.9.3",
     "random-number-in-range": "^1.0.0"
   }
