--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "inherits": "^2.0.1",
     "lodash": "^3.9.3",
-    "potion": "^0.13.0",
+    "potion": "^1.0.0-beta1",
     "random-number-in-range": "^1.0.0"
   }
 }
